@@ -1,11 +1,10 @@
 Author: Pino Toscano <toscano.pino@tiscali.it>
-Description: Enable RPATH also on Hurd and kFreeBSD
- Enable RPATH also on those platforms so the spectrum example can locate the
- fftreal library in its own directory.
+Description: Enable RPATH also on Hurd
+ Enable RPATH also on the Hurd, so the spectrum example can locate the fftreal
+ library in its own directory.
  .
- The "hurd-*" addition can be upstreamed, while the "gnukfreebsd-*" depends on
- a (currently) Debian-only mkspec.
-Last-Update: 2014-05-21
+ The "hurd-*" addition can be upstreamed.
+Last-Update: 2023-07-14
 Forwarded: no
 
 --- a/examples/multimedia/spectrum/app/app.pro
@@ -15,7 +14,7 @@ Forwarded: no
      }
  } else {
 -    linux-g++*: {
-+    linux-g++*|hurd-*|gnukfreebsd-*: {
++    linux-g++*|hurd-*: {
          # Provide relative path from application to fftreal library
          QMAKE_LFLAGS += -Wl,--rpath=\\\$\$ORIGIN
      }
