@@ -1,5 +1,8 @@
 qtmultimedia-opensource-src (5.15.10-3) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Drop the support for the dead GNU/kFreeBSD:
+    - rpath_nonlinux.diff: drop the usage of the gnukfreebsd-* mkspecs
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 14 Jul 2023 21:21:05 +0200
 
